# scriexe

./: .gitignore  CLAUDE.md  README.md  README_ZH.md  pyproject.toml
.github/workflows/: release-scriexe.yml
docs/superpowers/plans/: 2026-07-19-exegesis-workspace.md
docs/superpowers/specs/: 2026-07-19-exegesis-workspace-design.md  2026-07-22-expanded-help-design.md  2026-07-22-focus-band-contrast-design.md  2026-07-22-scriexe-distribution-design.md
examples/: import-sample.tsv
npm/scriexe/: package.json
npm/scriexe/test/: launcher.test.js
packaging/: build_core_data.py  prepare_native_package.py  scriexe.spec
packaging/attribution/: ASV.txt  CUVS.txt
src/exeg/: apibible.py  canon.py  cli.py  corpus.py  display.py  esv.py  fetch.py  i18n.py  importer.py  notes.py  refs.py  scaffold.py  search.py  setup.py  tui.py  usfm.py
studies/: 1pet_3.18-22.md
tests/: conftest.py  test_apibible.py  test_canon.py  test_cli.py  test_corpus.py  test_display.py  test_esv.py  test_fetch.py  test_help_contract.py  test_importer.py  test_native_package.py  test_packaging.py  test_refs.py  test_scaffold.py  test_search.py  test_setup.py  test_tui.py  test_tui2.py  test_usfm.py
